--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "autoprefixer": "^10.4.2",
         "axios": "^1.6.4",
+        "bootstrap": "^5.3.3",
         "laravel-vite-plugin": "^1.0.0",
-        "sass": "^1.71.0",
+        "sass": "^1.56.1",
         "vite": "^6.2.3"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3"
     }
 }
